--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
     <link rel="apple-touch-startup-image" href="/pbox.png">
     <link rel="apple-touch-icon-precomposed" sizes="57x57" href="pbox.png" />
 
-    <title>PBox mobile</title>
+    <title>PBox courier</title>
 
     <link rel="manifest" href="manifest.json">
 
