--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
     <link rel="apple-touch-startup-image" href="/pbox.png">
     <link rel="apple-touch-icon-precomposed" sizes="57x57" href="pbox.png" />
 
-    <title>PBox courier</title>
+    <title>PBox Courier</title>
 
     <link rel="manifest" href="manifest.json">
 
@@ -25,7 +25,7 @@
     <script src="js/app.js"></script>
 </head>
 
-<body ng-app="pbox">
+<body ng-app="pbox.courier">
     <ion-pane ng-controller="navController as vm">
         <ion-side-menus enable-menu-with-back-views="true">
             <ion-side-menu class="nav-list" side="left">
