--- a/src/index.html
+++ b/src/index.html
@@ -16,6 +16,7 @@
     <link rel="manifest" href="manifest.json">
 
     <link href="styles/styles.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Exo:400,600,800,900" rel="stylesheet">
 
     <!-- ionic & angular scripts -->
     <script src="js/libraries.js"></script>
@@ -31,7 +32,7 @@
             <ion-side-menu class="nav-list" side="left">
             </ion-side-menu>
             <ion-side-menu-content>
-                <ion-nav-bar class="bar-stable" ng-include="'app/navigation/navigation.html'"></ion-nav-bar>
+                <ion-nav-bar class="bar-stable" ng-include="'app/navigation/navigation.html'" ng-show="!(current_state.data && current_state.data.disableNav)"></ion-nav-bar>
                 <ion-nav-view></ion-nav-view>
             </ion-side-menu-content>
         </ion-side-menus>
