--- a/src/index.html
+++ b/src/index.html
@@ -22,6 +22,7 @@
     <script src="js/libraries.js"></script>
     <!-- cordova script (this will be a 404 during development) -->
     <script src="cordova.js"></script>
+    <script src="cordova_plugins.js"></script>
     <!-- your app's js -->
     <script src="js/app.js"></script>
 </head>
