--- a/src/index.html
+++ b/src/index.html
@@ -18,6 +18,8 @@
     <link href="styles/styles.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Exo:400,600,800,900" rel="stylesheet">
 
+    <script src="http://maps.google.com/maps/api/js?sensor=true"></script>
+
     <!-- ionic & angular scripts -->
     <script src="js/libraries.js"></script>
     <!-- cordova script (this will be a 404 during development) -->
