--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,7 @@
     <link href="styles/styles.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Exo:400,600,800,900" rel="stylesheet">
 
-    <script src="http://maps.google.com/maps/api/js?key=AIzaSyCBlwKrnpo7BhihtH9TPzLrPFIleoNoV8Y"></script>
+    <script src="https://maps.google.com/maps/api/js?key=AIzaSyCBlwKrnpo7BhihtH9TPzLrPFIleoNoV8Y"></script>
 
     <!-- ionic & angular scripts -->
     <script src="js/libraries.js"></script>
