--- a/src/index.html
+++ b/src/index.html
@@ -23,8 +23,10 @@
     <!-- ionic & angular scripts -->
     <script src="js/libraries.js"></script>
     <!-- cordova script (this will be a 404 during development) -->
+    <!-- @if PLATFORM != 'web' -->
     <script src="cordova.js"></script>
     <script src="cordova_plugins.js"></script>
+    <!-- @endif -->
     <!-- your app's js -->
     <script src="js/app.js"></script>
 </head>
