--- a/src/index.html
+++ b/src/index.html
@@ -35,7 +35,7 @@
             <ion-side-menu class="side-menu nav-list" side="left" ng-include="'app/navigation/side.menu.html'">
             </ion-side-menu>
             <ion-side-menu-content>
-                <ion-nav-bar class="bar-stable" ng-include="'app/navigation/navigation.html'" ng-show="!(current_state.data && current_state.data.disableNav)"></ion-nav-bar>
+                <ion-nav-bar class="bar-stable" ng-include="'app/navigation/navigation.html'" ng-show="!(currentState.data && currentState.data.disableNav)"></ion-nav-bar>
                 <ion-nav-view></ion-nav-view>
             </ion-side-menu-content>
         </ion-side-menus>
